--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.datasource.validationQuery = SELECT 1
 # ====================================
 spring.mvc.view.prefix = /WEB-INF/view/
 spring.mvc.view.suffix = .jsp
+
+# ====================================
+server.error.whitelabel.enabled
