--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,4 +19,4 @@ spring.mvc.view.prefix = /WEB-INF/view/
 spring.mvc.view.suffix = .jsp
 
 # ====================================
-# server.error.whitelabel.enabled
+server.error.whitelabel.enabled = false
